--- a/popup.html
+++ b/popup.html
@@ -3,22 +3,33 @@
 
 <head>
     <meta charset="UTF-8">
+
     <title>BoomPanel.com/extension</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 </head>
 
 <body style="padding: 10px">
-    <h4 class="text-center mb-3">BoomPanel.com extension</h4>
+    <h4 class="text-center mb-3">
+        BoomPanel.com extension
+    </h4>
+
     <div class="alert alert-primary" role="alert" style="display:none" id="message">
         Settings saved
     </div>
+
     <input type="text" class="form-control" id="servergroup" style="width: 300px" placeholder="Server group name">
-    <button class="btn btn-primary w-100 mt-2">Save</button>
+
+    <button class="btn btn-primary w-100 mt-2">
+        Save
+    </button>
+
     <hr>
+
     <a href="https://boompanel.com/extension#register" target="_blank" class="btn btn-light btn-sm w-100">
         Create your server group here
     </a>
+
     <script src="popup.js" charset="utf-8"></script>
 </body>
 
